# ah.sh

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md  RELEASE.md  flake.nix  script.nix
.devenv/: profile  run  tasks.db-shm  tasks.db-wal
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cachix.yml  cachix.yml.bak  release-please.yml  release-please.yml.bak  release-plz.yml  release.yml  update-langs.yml  update-supported-languages.yml
adhoc/: flake.nix  justfile
adhoc/nix/modules/: devenv.nix
basic/nix/modules/: devenv.nix  treefmt.nix
docs/superpowers/plans/: 2026-03-12-session-module-refactor.md  2026-03-13-project-wide-refactor.md  2026-03-21-session-module-unification.md  2026-03-23-anyhow-tracing-refactor.md
docs/superpowers/specs/: 2025-04-13-cli-config-feature-design.md  2026-03-12-session-module-refactor-design.md  2026-03-13-project-wide-refactor-design.md  2026-03-21-session-module-unification-design.md  2026-03-23-error-logging-tracing-design.md
providers/dev-templates/: flake.nix
providers/devenv/: flake.nix  supported_langs.json
rust/: .gitignore  flake.nix
rust/nix/modules/: devenv.nix  top-level.nix  treefmt.nix
src/: cli.rs  cmd.rs  command.rs  config.rs  env.rs  error.rs  executor.rs  lib.rs  log.rs  logging.rs  main.rs  manager.rs  output.rs  path.rs  paths.rs  session.rs  session_service.rs  sessions.rs  util.rs  utils.rs  warning.rs
src/app/: mod.rs  session_app.rs
src/assets/: config.schema.json  default_config.toml  lang_pkgs.json  language_aliases.json
src/assets/providers/dev-templates/: flake.nix  language_aliases.json  mapping_langs.json  (+2 more)
src/cli/: completions.rs  implicit_use.rs  mod.rs  types.rs
src/log/: mod.rs  types.rs
src/provider/: language.rs  language_maps.rs  mod.rs  registry.rs  types.rs
src/provider/dev_templates/: attrs_cache.rs  fetcher.rs  flake_generator.rs  mod.rs  nix_parser.rs  store_resolver.rs
src/provider/devenv/: flake_generator.rs  mod.rs
src/providers/: dev_templates.rs  devenv.rs  mod.rs
src/providers/dev_templates/: fetcher.rs  flake_generator.rs  mod.rs  nix_parser.rs
src/providers/devenv/: flake_generator.rs  mod.rs
src/session/: mod.rs  service.rs  storage.rs  types.rs
tests/: cli_contract.rs  session_module_paths.rs  session_service.rs  session_types.rs
(+3 files in other folders)
