[package]
name = "ah"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8"
anyhow = "1.0"
clap = { version = "4.6.0", features = ["derive"] }
rnix = "0.14"
rowan = "0.16"
serde = { version = "1.0.228" ,features = ["derive"]}
serde_json = "1.0.149"
directories = "6"
rayon = "1.10"
strum = { version = "0.28", features = ["derive"] }
