[package]
name = "ah-sh"
version = "0.1.0"
edition = "2024"
description = "Magic development environments powered by Nix"
authors = ["zion <ox7a696f6e@outlook.com>"]
license = "MIT"
repository = "https://github.com/z1-0/ah.sh"
keywords = ["cli", "nix", "dev", "shell", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ah"
path = "src/main.rs"

[badges]
github-actions = { repository = "z1-0/ah.sh" }

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2"
console = "0.16"
directories = "6"
rayon = "1.11"
rnix = "0.14"
rowan = "0.16"
serde = { version = "1.0.228" ,features = ["derive"]}
serde_json = "1.0.149"
strum = { version = "0.28", features = ["derive"] }
