[package]
name = "ah-sh"
version = "0.0.0"
edition = "2024"
publish = false
description = "Magic development environments powered by Nix"
authors = ["zion <ox7a696f6e@outlook.com>"]
license = "MIT"
repository = "https://github.com/z1-0/ah.sh"
keywords = ["cli", "nix", "dev", "shell", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "ah"
path = "src/lib.rs"

[[bin]]
name = "ah"
path = "src/main.rs"

[badges]
github-actions = { repository = "z1-0/ah.sh" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.6", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
comfy-table = "7.2"
config = "0.15"
crossterm = "0.29"
directories = "6"
fs-err = "3"
libc = "0.2"
rayon = "1.12"
rnix = "0.14"
rowan = "0.16"
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3.27.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "fmt",
] }
